updated using prettier and did the tasks correct

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["stringifier", "typicode", "yoyoyo"]
+  "cSpell.words": [
+    "stringifier",
+    "typicode",
+    "yoyoyo"
+  ],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
 }
